--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,14 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="moulin.evfriend"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="0.1.0">
         
   <uses-sdk android:minSdkVersion="7" />
   
   <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <!--uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /-->
   
   <application android:label="@string/app_name"
                android:icon="@drawable/icon"
@@ -18,12 +18,14 @@
     
     <activity android:name="moulin.evfriend.MainActivity"
               android:label="@string/app_name">
+    </activity>
+    
+    <activity android:name="moulin.evfriend.RechargeMapActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+
     </activity>
-    
-    <activity android:name="moulin.evfriend.RechargeMapActivity" />
   </application>
 </manifest> 
